<resources>
    <string name="app_name">MyRestaurants</string>
    <string name="hello">Hello Restaurants</string>
    <string name="btn1_text">Find Restaurants</string>
    <string name="btn2_text">Saved Restaurants</string>
    <string name="img_desc">Mine</string>
    <string name="input_text">Enter Zip Code</string>

    <string name="rest_act">Restaurants near</string>

    <string name="restaurant_name">Restaurant Name</string>
    <string name="tags">Tags</string>
    <string name="rating">Rating</string>
    <string name="view">View on Yelp</string>
    <string name="phone">(503) 223–1282</string>
    <string name="address">123 SW Best Ever Ave. Portland, Oregon, 97222</string>

    <string name="img_description">Mine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Name</string>
    <string name="password">Password</string>
    <string name="user_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_here">Already have an account? <![CDATA[<a href="#">Sign In Here.</a>]]></string>
    <string name="create_account">Create Account</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here">Don\'t have an account? <![CDATA[<a href="#">Sign Up Here</a>]]></string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="test_string">Hi there!</string>
    <string name="logout">Logout</string>
    <string name="bike_bruh">Bike bruh</string>
    <string name="dummy_txt">Mmm mmm</string>
    <string name="that_mahali">That mahali</string>
    <string name="drag_it">drag_it</string>
    <string name="save">Save Restaurant</string>
    <string name="photo">Photo</string>

</resources>
