<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B4162"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/img_desc"
        android:src="@drawable/mine"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/textIcons" />

    <EditText
        android:id="@+id/editLocationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/textIcons"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:ems="10"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/findRestaurantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1_text"
        android:background="@color/btn2"
        android:textColor="@color/primaryLight"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp" />


</RelativeLayout>